--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="utf-8">
         <meta name="author" content="Fernando Rodriguez">
-        <meta name="discrption" content="This is a basic BoilerPlate">
+        <meta name="discrption" content="Season 2 of JsPratice">
 
         <meta property="og:image" content="Favacon.png">
         <meta property="FavaCon" content="Chems with code">
         <meta property="A picture of Chems with Code writen" content="Future FavaCon">
         <link rel="shortcut icon" href="Favacon.png" type="image/x-icon">
         
-        <title>Welcome Back Project</title>
+        <title>Season 2 JsPratice</title>
     </head>
     <body>
         <script src="script.js"></script>
